# porcaro_2026

./: .gitignore  README.md  environment.yml
scripts/: list_envs.py  random_agent.py  zero_agent.py
scripts/rsl_rl/: play.py  play_sim_midi.py  play_sim_rhythm.py  train.py
source/porcaro_2026/: pyproject.toml  setup.py
source/porcaro_2026/config/: extension.toml
source/porcaro_2026/porcaro_2026/: ui_extension_example.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/: __init__.py  porcaro_2026_env.py  porcaro_2026_env_cfg.py  rhythm_generator.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/actions/: base.py  pam.py  pneumatic.py  torque.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/agents/: rsl_rl_ppo_lstm_cfg.py  rsl_rl_ppo_mlp_cfg.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/cfg/: actuator_cfg.py  assets.py  controller_cfg.py  logging_cfg.py  rewards_cfg.py  sensors.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/logging/: datalogger.py  logging_manager.py
source/porcaro_2026/porcaro_2026/tasks/direct/porcaro_2026/rewards/: reward.py
